--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -61,8 +61,7 @@
   function playSound(e) {
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
     const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
-
-    if (!audio) return; //stop function from running altogether
+    if (!audio) return;
     audio.currentTime = 0;
     audio.play();
     key.classList.add('playing');
@@ -75,7 +74,7 @@
 
   const keys = document.querySelectorAll('.key');
   keys.forEach(key => key.addEventListener('transitionend', removeTransition));
-  window.addEventListener('keydown', playSound);
+  window.addEventListener("keydown", playSound);
 </script>
 
 
